Plantilla Microservicios GrupoDifare/CI/QA/openshift/deployment.yml
# ------------------- Route  ------------------- #
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nombrecodigo-route
  namespace: ocp-qa
spec:
  host: nombrecodigo.qa.apps.ocp4mqa.grupodifare.com
  to:
    kind: Service
    name: nombrecodigo-services
  port:
    targetPort: http
---
# ------------------- Service ------------------- #
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nombrecodigo
  name: nombrecodigo-services
  namespace: ocp-qa
spec:
  ports:
    - name: http
      protocol: TCP 
      port: 2000
      targetPort: 80
  selector:
    app: nombrecodigo
---
# ------------------ Deployment ----------------- #
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nombrecodigo
  name: nombrecodigo-deploy
  namespace: ocp-qa
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nombrecodigo
  strategy:
    type: RollingUpdate
    rollingUpdate:
        maxSurge: 1
        maxUnavailable: 1
  minReadySeconds: 2
  template:
    metadata:
      labels:
        app: nombrecodigo
    spec:
      serviceAccountName: default
      nodeSelector:
        QA: "TRUE"
      containers:
      - name: nombrecodigo
        image: dockernp.grupodifare.com/qa-nombrecodigo-image
        resources:
          limits:
            cpu: "250m"
            memory: 256Mi
          requests:
            cpu: "50m"
            memory: 64Mi
        ports:
        - containerPort: 80
          name: nombrecodigo
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health/
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /health/
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 20
      imagePullSecrets:
       - name: nexus-secret
